--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,9 +64,25 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+body {
+	width: 90%;
+	margin: auto;
+}
+
+header {
+	text-align: center;
+	display: inline-block;
+}
+
 nav {
 	color: gray;
     margin: 10%;
-    padding: 1%;
+    padding: 5%;
     width: 100%;
+}
+
+.img-move {
+	margin-left: 200%;
+	display: inline-block;
 }
