--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -65,24 +65,82 @@ h1, h2, h3, h4, h5 {
 
 /* Your code starts here! */
 
+
+
+
 body {
 	width: 90%;
 	margin: auto;
 }
 
-header {
+.topnav {
+	background-color: rgb(75, 70, 70);
+	overflow: hidden;
+  }
+  
+  
+  .topnav a {
+	float: left;
+	color: #f2f2f2;
 	text-align: center;
-	display: inline-block;
-}
-
-nav {
-	color: gray;
-    margin: 10%;
-    padding: 5%;
-    width: 100%;
-}
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+  }
+  
+  
+  .topnav a:hover {
+	background-color: #ddd;
+	color: black;
+  }
+  
+ 
+  .topnav a.active {
+	background-color: #4CAF50;
+	color: white;
+  }
 
 .img-move {
-	margin-left: 200%;
-	display: inline-block;
+	margin-left: 75%;
+	display: block;
+	float: left;
 }
+
+.logo {
+  margin-left: 40%;
+
+}
+
+#h1-left{ 
+	float:left;   
+	width:25%; 
+	height:280px; 
+	margin: 80px ;
+	text-align: center;
+	font-size: 300%;
+} 
+
+#img-right{ 
+	float:right;  
+	width:25%; 
+	height:280px; 
+	margin:
+}
+
+.container {
+    width: 50%;
+    height:50px;
+    margin: 400px ;
+	padding: 10px;
+}
+	
+	.one {
+		width: 15%;
+		height: px;
+		float: left;
+	}
+
+	.two {
+		margin-left: 15%;
+		height: 200px;
+	}
